--- a/src/components/textarea/Textarea.module.scss
+++ b/src/components/textarea/Textarea.module.scss
@@ -4,6 +4,7 @@
     padding: 16px 16px;
     width: 100%;
     border-radius: 10px;
+    transition: border-color 0.3s;
 
     @media (min-width: 578px) {
         padding: 16px 24px;
